Add navigation HTML elements and basic CSS styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,21 @@
 
     <header>
 
-        <nav>
+        <nav class="nav">
 
+            <ul class="nav-items">
+                <div class="nav-left">
+                    <p>Header Logo</p>
+                </div>
+                
+
+                <div class="nav-right">
+                    <li><a href="#">Header Link One</a></li>
+                    <li><a href="#">Header Link Two</a></li>
+                    <li><a href="#">Header Link Three</a></li>
+                </div>
+                
+            </ul>
         </nav>
 
     </header>
