Add hero text and image with resizing in CSS

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
         </header>
 
+        <section class="hero-content">
+            <p>This website is awesome</p>
+            <p>This website has some subtext that goes under here the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign Up</button>
+            <img src="./images/akihabara_road.jpg" alt="A lovely street in Akihabara">
+        </section>
+
     </div>
 
 
