--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
 
     <section class="content">
 
+        <h1>Some random Information</h2>
+
+            <div class="image-collection">
+
+                <div class="image-content">
+                    <img src="/images/imgcollection.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+
+            </div>
+
     </section>
 
     <section class="quote">
