Add header styling and image content styling

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
                     <p>This is some subtext under an illustration or image</p>
                 </div>
 
+                <div class="image-content">
+                    <img src="/images/imgcollection.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="image-content">
+                    <img src="/images/imgcollection.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="image-content">
+                    <img src="/images/imgcollection.jpg" alt="">
+                    <p>This is some subtext under an illustration or image</p>
+                </div>
+
+
             </div>
 
     </section>
