Add quote contents

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
     </section>
 
     <section class="quote">
+
+        <p class="main-quote">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis laborum minima adipisci, soluta harum neque molestias natus voluptates praesentium illum numquam eligendi, debitis doloribus ipsum accusamus repellendus, enim quod sunt.
+        </p>
+
+        <p class="quote-name">
+            John Doe
+        </p>
         
     </section>
 
