--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </p>
 
         <p class="quote-name">
-            John Doe
+            -John Doe
         </p>
         
     </section>
