Add call to action HTML contents

--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
     </section>
 
     <section class=callToAction>
+
+        <div class="cta-contents">
+
+            <div class="cta-left">
+            <p class="cta-head">Call to action! It's time!
+            </p>
+            <p class="cta-description">Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <button class="cta-button">Sign up</button>
+            
+        </div>
         
     </section>
 
