Add footer contents

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="cta-right">
 
                 <button class="cta-button">Sign up</button>
-                
+
             </div>
 
 
@@ -118,7 +118,7 @@
     </section>
 
     <footer>
-        
+        <p>Copyright © The Odin Project 2025</p>
     </footer>
 </body>
 </html>
